# My_Learning-Python

./: .gitignore  .gitmodules  Cargo.toml  README.md  anaconda.md  excel.md  matplotlib.md  my_python_essentials.md  pandas.md  pip.md  xlwings_commands.md
coding/: README.md  beautiful_soup.ipynb  computer_vision.md  datetime.ipynb  datetime_reference.md  dictionary.py  filter.py  gmail.md  lambda.py  list_find.py  map.py  nested_dict_get_key.py  nested_dict_set_key.py  requests.ipynb  titanic.md  underscores.ipynb
coding/exception_handling/: exception.py
coding/file_in_out/: flights.txt  flights_readfile.py  folder_traverse.py  practice.py
coding/iteration_codility/: iteration.py  test.py
coding/shortcuts/: list_find_match.py  shortcuts.ipynb
data/: README.md
images/: README.md
libs/: anaconda.md  matplotlib.md  pandas.md  pip.md  xlwings.md  xlwings_commands.md
libs/Anaconda/: README.md  anaconda.md
libs/Dash/: README.md  dash.md
libs/Dash/coding/: 1_demo.py  kill_port.bat  tab.py
libs/Dash/examples/: 1_demo.py  2_hello.py  practice.py  tab.py
libs/Graphviz/: graphviz.md
libs/Graphviz/sample_output/: octopus.dot
libs/Pandas/: pandas.md
libs/Plotly/: README.md  plotly-pie_chart.ipynb  plotly.md  temp-plot.html
libs/Plotly/Contour/: contour.py  (+2 more)
libs/docx/: README.md  demo.docx  main.py  utility.py
libs/dotenv/: .env.example  README.md
libs/file_handling/: 349237850.001  425236175.001  432435567.001  432798479.001  543954384.001  786825801.001  845782369.001  REPL1A_CP-Plot.html  REPL1A_Nit_ER-Plot.html  REPL1A_Nit_Unif-Plot.html  REPL1A_Poly_ER-Plot.html  REPL1A_Poly_Unif-Plot.html  mk_mul_dirs.py  os.py  prac.py
libs/flet/: README.md
libs/flet/flet-demo/: .gitignore  pyproject.toml  requirements.txt
libs/flet/flet-demo/src/flet_demo/: main.py  todo.py
libs/json/: Untitled.ipynb  json.ipynb
libs/matplotlib/: README.md
libs/numpy/: README.md  main.py  numpy.ipynb  numpy_practice.ipynb
libs/openai/: README.md  embeddings.json
libs/openai/demo/: .gitignore  README.md  pyproject.toml  requirements.txt
libs/openai/demo/examples/: README.md  cos_sim.py  embed.py  embed_dim.py  embed_reviews.py  into_tokens.py  lsh_rand.py  simple.py  utils.py
libs/openai/demo/src/openai_demo/: __init__.py  main.py
libs/openpyxl/: README.md  practice.ipynb
libs/pil/: 01_openimg.py
libs/polars/: nb1.ipynb
libs/py-pm-tools/: .gitignore  .todo  README.md
libs/py-pm-tools/huak/demo/: .gitignore  pyproject.toml  requirements.txt
libs/py-pm-tools/huak/demo/src/demo/: main.py  maths.py
libs/py-pm-tools/maturin/guessing-game/: Cargo.toml  pyproject.toml
libs/py-pm-tools/maturin/guessing-game/src/: lib.rs
libs/py-pm-tools/poetry/demo/: README.md  pyproject.toml
libs/py-pm-tools/poetry/demo/demo/: __init__.py  greet.py  maths.py
libs/pycryptodome/: README.md
libs/pyppeteer/: 1.py  README.md
libs/pyqt5/: FAQs.md  README.md
libs/random/: 1.py  2.py  README.md
libs/regex/: allowed_chars.py
libs/requests/: README.md
libs/ruff/: README.md
libs/spellchecker/: Untitled.ipynb
libs/xlwings/: README.md  xlwings.md  xlwings_commands.md
(+135 files in other folders)
