[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flet-demo"
version = "0.0.1"
description = ""
dependencies = [
    "flet ==0.21.2",
]

[project.optional-dependencies]
dev = [
    "build ==1.2.1",
]

[tool.huak.task]
counter = "python3 src/flet_demo/counter.py"
todo = "python3 src/flet_demo/todo.py"