[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-demo"
version = "0.0.1"
description = ""
dependencies = [
    "openai ==1.12.0",
    "pandas ==2.2.0",
    "pyarrow ==15.0.0",
    # Avoid warning adding this. Anyway, this would be added into `pandas` in v3.0.0.
    "tiktoken ==0.6.0",
]

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[tool.huak.task]
main = "python3 src/openai_demo/main.py"
simple = "python3 examples/simple.py"
embed = "python3 examples/embed.py"
embed_dim = "python3 examples/embed_dim.py"
into_tokens = "python3 examples/into_tokens.py"
