[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo"
version = "0.0.1"
description = ""
dependencies = []

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "pytest==8.0.0",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[tool.huak.task]
main = "python3 src/demo/main.py"
greet = "python3 src/demo/greet.py"
maths = "python3 src/demo/maths.py"
