[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["abhi3700 <dalvath3700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
city = "demo:city"  # defined in "__init__.py"
village = "demo:village"  # defined in "__init__.py"
maths="demo.maths:main" # defined in "main.py"
greet="demo.greet:main" # defined in "greet.py"